2017-05-24  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el, soap-inspect.el: Merge emacs.git whitespace
	changes to eliminate tabs.

2017-05-24  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* soap-inspect.el: replaced cl library with cl-lib, case replaced
	with cl-case, destructuring-bind with cl-destructuring-bind and
	loop with cl-loop

	* soap-client.el: replaced cl library with cl-lib. defstruct
	replaced with cl-defstruct, assert with cl-assert, case with
	cl-case, ecase with cl-ecase, loop with cl-loop and
	destructuring-bind with cl-destructuring-bind.

2016-03-16  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-inspect.el (soap-inspect-xs-attribute): Fix checkdoc error.
	(soap-inspect-xs-attribute-group): Likewise.

2016-03-16  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el: Bump version to 3.1.1.

2016-03-16  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-encode-xs-complex-type): Fix error message.
	(soap-find-port): Delete trailing whitespace.
	(soap-find-operation): Fix documentation and rename parameter.
	(soap-find-port): Likewise.
	(soap-operation-arity): Likewise.

2016-03-16  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el: Bump version to 3.1.0.

2016-03-02  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	Import changes from Emacs master branch
	* soap-client.el: Update copyright years.
	(soap-warning): Fix docstring quoting.
	(soap-decode-date-time): Likewise.
	(soap-validate-xs-simple-type): Remove tabs for indentation.
	* soap-inspect.el: Update copyright years.

2016-02-29  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* soap-client.el (soap-find-port, soap-find-operation)
	(soap-operation-arity): new defuns
	(soap-invoke-internal): use soap-find-port, soap-find-operation.

2015-11-11  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el: Bump version to 3.0.2.

2015-11-11  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-warning): Use format, not format-message.
